<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="add_favorites">Добавить в избранного</string>
    <string name="app_name">HabraClient</string>
    <string name="captcha">Капча</string>
    <string name="exit">Выход</string>
    <string name="favorites">Избранное</string>
    <string name="fullscreen">Полный экран</string>
    <string name="habrahabr">Хабрахабр</string>
    <string name="load_images">Загружать картинки</string>
    <string name="load_images_summary">Загружать изображения из постов, вопросов и комментариев?</string>
    <string name="login">Вход</string>
    <string name="login_form">Войти на хабр</string>
    <string name="login_form_summary">Используйте для входа на хабрахабр</string>
    <string name="logout">Выход</string>
    <string name="main_screen_content">Главный экран</string>
    <string name="main_screen_content_summary">Позволяет выбрать страницу для отображения на главном экране</string>
    <string name="mark">Оценка</string>
    <string name="password">Пароль</string>
    <string name="preferences">Настройки</string>
    <string name="private_mail">Личная почта</string>
    <string name="rating">Рейтинг</string>
    <string name="refresh">Обновить</string>
    <string name="save_password">Сохранять пароль</string>
    <string name="skip">Пропустить</string>
    <string name="user_bar">Пользовательский бар</string>
    <string name="user_bar_summary">Настройки польовательского бара</string>
    <string name="user_bar_hide">Скрыть UserBar</string>
    <string name="user_bar_hide_summary">Скрыть пользовательский бар</string>
    <string name="user_mark">Карма</string>
    <string name="user_name">Имя пользователя</string>
    <string name="user_bar_hide_mark">Скрыть карму</string>
    <string name="user_bar_hide_force">Скрыть ХабраСилу</string>
    <string name="user_bar_hide_favorites">Скрыть избранное</string>
    <string name="user_bar_hide_pm">Скрыть личную почту</string>
    <string name="user_bar_hide_mark_summary"></string>
    <string name="user_bar_hide_force_summary"></string>
    <string name="user_bar_hide_favorites_summary"></string>
    <string name="user_bar_hide_pm_summary"></string>
    <string name="logout_summary">Выйти с хабра</string>
    <string name="logout_success">Вы вышли с хабра</string>
    <string name="logout_fail">Дверь закрыта, выйти не получилось.</string>
    <string name="skip_login_text">Вы можете зайти в свой аккаунт через настройки</string>
    <string name="logged">Вы зашли в свой аккаунт</string>
    <string name="posts">Посты</string>
    <string name="q_a">Q&amp;A</string>
    <string name="blogs">Блоги</string>
    <string name="companies">Компании</string>
    <string name="people">Люди</string>
    <string name="hide_post_element">Скрыть элементы поста</string>
    <string name="hide_post_content">Скрыть текст поста</string>
    <string name="hide_post_tags">Скрыть теги</string>
    <string name="hide_post_mark">Скрыть оценку</string>
    <string name="hide_post_date">Скрыть дату</string>
    <string name="hide_post_favs">Скрыть избранное</string>
    <string name="hide_post_author">Скрыть автора</string>
    <string name="hide_post_comments">Скрыть кол-во комментариев</string>
    <string name="hide_post_element_summary">При просмотре списка постов</string>
    <string name="hide_post_content_summary"></string>
    <string name="hide_post_tags_summary"></string>
    <string name="hide_post_mark_summary"></string>
    <string name="hide_post_date_summary"></string>
    <string name="hide_post_favs_summary"></string>
    <string name="hide_post_author_summary"></string>
    <string name="hide_post_comments_summary"></string>
    <string name="enable_flash">Включить флеш</string>
    <string name="enable_flash_summary">Если флеш будет выключен, вместо него будет ссылка на видео, которую можно открыть в плеере или брузере.</string>
    <string name="enable_zoom">Включть маштабирование</string>
    <string name="enable_zoom_summary">Стандартный механизм маштабирования мультитачем или кнопками.</string>
    <string name="hide_quest_answers">Скрыть кол-во ответов</string>
    <string name="hide_quest_answers_summary"></string>
    <string name="hide_quest_element">Скрыть элементы вопроса</string>
    <string name="hide_quest_element_summary">При отображении в виде списка</string>
    <string name="comments">Комментарии</string>
    <string name="comment">Комментарий</string>
    <string name="commenting">Комментировать</string>
    <string name="share">Отправить</string>
    <string name="open">Открыть</string>
    <string name="author">Автор</string>
    <string name="vote">Голосовать</string>
    <string name="vote_up">+1</string>
    <string name="vote_down">-1</string>
    <string name="vote_zero">0</string>
    <string name="copy_link">Копировать ссылку</string>
    <string name="remove_favorites">Удалить из избранного</string>
    <string name="cache">Кэш</string>
    <string name="preview">Предпросмотр</string>
    <string name="send">Отправить</string>
    <string name="enter_text">Введите текст здесь</string>
    <string name="title">Заголовок</string>
    <string name="tags">Тэги</string>
    <string name="need_login">Для использования данной штуки нужно зайти на хабр.</string>
    <string name="not_cache">Эта страница не была добавлена в кэш.</string>
    <string name="favorite_added">Добавлено в избранное</string>
    <string name="favorite_removed">Удалено из избранного</string>
    <string name="favorite_failed">Не удалось изменить избранное</string>
    <string name="this_is_picture">Здесь была картинка</string>
    <string name="this_is_video">Здесь был ролик</string>
    <string name="vote_ok">Проголосовано</string>
    <string name="vote_failed">Не удалось проголосовать</string>
    <string name="use_cache">Кэшировать страницы</string>
    <string name="use_cache_summary">для офлайн просмотра</string>
    <string name="cant_send_request">Не могу отправить запрос</string>
    <string name="loading">Идёт загрузка. Пожайлуста подождите.</string>
    <string name="user_bar_not_update">Обновлять только 1 раз</string>
    <string name="user_bar_not_update_summary">Позволит экономить трафик с кажой страницей</string>
    <string name="my_profile">Мой профиль</string>
    <string name="options">Опции программы</string>
    <string name="draw_options">Настройки отображения</string>
    <string name="friend_added">Предложение о дружбе послано</string>
    <string name="friend_removed">Друг удалён</string>
    <string name="friend_failed">Не удалось предложить дружбу</string>
    <string name="message_sent">Сообщение отправлено</string>
    <string name="message_failed">Не удалось отправить сообщение</string>
    <string name="show_nav">Навигация</string>
    <string name="menu">Меню</string>
    <string name="default_scale">Масштаб по умолчанию</string>
    <string name="default_scale_summary"></string>
    <string name="nav_habred">Захабренные</string>
    <string name="nav_new">Новые</string>
    <string name="nav_unhabred">Отхабренные</string>
    <string name="lenta">Лента</string>
    <string name="all_posts">Все посты</string>
    <string name="all_new_posts">Все новые посты</string>
    <string name="load">Загружать</string>
    <string name="load_on_wifi">Загружать по Wi-Fi</string>
    <string name="not_load">Не загружать</string>
    <string name="all">Все</string>
    <string name="tematic">Тематические</string>
    <string name="corporative">Корпоративные</string>
    <string name="inbox">Входящие</string>
    <string name="hot">Горячие</string>
    <string name="popular">Популярные</string>
    <string name="no_answers">Без ответа</string>
    <string name="sandbox">Песочница</string>
    <string name="incorrect_post">Некоректный пост</string>
    <string name="empty_text">Пустой текст</string>
    <string name="not_added">Не добавлено</string>
</resources>
