<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
	<Preference
		android:title="@string/login_form"
		android:summary="@string/login_form_summary"
		android:key="prefLoginForm" />
	<Preference
		android:title="@string/logout"
		android:summary="@string/logout_summary"
		android:key="prefLogout" />
	<ListPreference
		android:title="@string/main_screen_content"
		android:summary="@string/main_screen_content_summary"
		android:key="prefMainScreenContent"
		android:defaultValue="2"
		android:dialogTitle="@string/main_screen_content"
		android:entries="@array/name_main_screen_content"
		android:entryValues="@array/value_main_screen_content" />        
	<ListPreference
		android:title="@string/load_images"
		android:summary="@string/load_images_summary"
		android:key="prefLoadImages"
		android:defaultValue="2"
		android:dialogTitle="@string/load_images"
		android:entries="@array/name_load_images"
		android:entryValues="@array/value_load_images" />
	<CheckBoxPreference 
		android:key="prefFullScreen" 
		android:defaultValue="false" 
		android:title="@string/fullscreen"/>
	<PreferenceScreen 
		xmlns:android="http://schemas.android.com/apk/res/android" 
		android:summary="@string/user_bar_summary" 
		android:key="prefUserBar" 
		android:title="@string/user_bar">
		<CheckBoxPreference 
			android:key="prefUserBarHide" 
			android:defaultValue="false" 
			android:title="@string/user_bar_hide"
			android:summary="@string/user_bar_hide_summary"/>
		<CheckBoxPreference 
			android:key="prefUserBarHideMark" 
			android:defaultValue="false" 
			android:title="@string/user_bar_hide_mark"
			android:summary="@string/user_bar_hide_mark_summary"/>
		<CheckBoxPreference 
			android:key="prefUserBarHideForce" 
			android:defaultValue="false" 
			android:title="@string/user_bar_hide_force"
			android:summary="@string/user_bar_hide_force_summary"/>
		<CheckBoxPreference 
			android:key="prefUserBarHideFavorites" 
			android:defaultValue="false" 
			android:title="@string/user_bar_hide_favorites"
			android:summary="@string/user_bar_hide_favorites_summary"/>
		<CheckBoxPreference 
			android:key="prefUserBarHidePM" 
			android:defaultValue="false" 
			android:title="@string/user_bar_hide_pm"
			android:summary="@string/user_bar_hide_pm_summary"/>
	</PreferenceScreen>
</PreferenceScreen>