<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <HorizontalScrollView 
    	android:id="@+id/scrollUserBar" 
    	android:layout_width="wrap_content" 
    	android:layout_height="wrap_content">
        <LinearLayout 
        	android:layout_width="match_parent" 
        	android:layout_height="wrap_content" 
        	android:id="@+id/layoutUserBar" 
        	android:gravity="center_horizontal|top" 
        	android:layout_gravity="fill_horizontal|center_horizontal">
            <Button android:text="@string/captcha" android:layout_width="wrap_content" android:id="@+id/titleUserName" android:layout_marginLeft="5dip" android:gravity="center_vertical|center_horizontal" android:textSize="24px" android:maxWidth="100dip" android:layout_height="40dip" android:maxHeight="40dip" android:layout_marginRight="5dip" android:onClick="onClickUserName" android:background="@color/userbar_name_bg_color" android:textColor="@color/userbar_button_text_color"/>
            <TextView android:text="@string/user_mark" android:textColor="#6C6" android:layout_width="wrap_content" android:id="@+id/titleKarma" android:textSize="20dip" android:layout_height="30dip" android:maxHeight="40dip" android:layout_marginRight="5dip"/>
            <TextView android:text="@string/rating" android:textColor="#C6C" android:layout_width="wrap_content" android:textSize="20dip" android:layout_height="30dip" android:id="@+id/titleHabraForce"/>
            <Button android:layout_width="wrap_content" android:text="@string/favorites" android:id="@+id/buttonFavorites" android:layout_marginLeft="5dip" android:layout_height="40dip" android:onClick="onClickFavorites"/>
            <Button android:layout_width="wrap_content" android:text="@string/private_mail" android:id="@+id/buttonPrivateMail" android:layout_height="40dip" android:onClick="onClickPM"/>
        </LinearLayout>
    </HorizontalScrollView>
    <RelativeLayout android:id="@+id/relativeLayout1" android:layout_height="match_parent" android:layout_width="match_parent" android:gravity="right" android:background="@color/userbar_button_text_color">
        <WebView android:id="@+id/result" android:layout_width="match_parent" android:layout_height="match_parent"/>
        <ProgressBar android:id="@+id/procLoading" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginRight="0px" android:layout_alignParentRight="true"/>
        <LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content" android:orientation="vertical" android:id="@+id/layoutAllNavPanels">
            <LinearLayout android:layout_height="wrap_content" android:id="@+id/layoutNavPanel" android:layout_width="match_parent" android:background="#000">
                <ToggleButton android:id="@+id/buttonNavPost" android:onClick="onClickNav" android:textOn="@string/posts" android:textOff="@string/posts" style="@style/MenuButton" android:checked="true"/>
                <ToggleButton android:id="@+id/buttonNavQA" android:onClick="onClickNav" android:textOn="@string/q_a" android:textOff="@string/q_a" style="@style/MenuButton"/>
                <ToggleButton android:id="@+id/buttonNavPeople" android:onClick="onClickNav" android:textOn="@string/people" android:textOff="@string/people" style="@style/MenuButton"/>
                <ToggleButton android:id="@+id/buttonNavBlog" android:onClick="onClickNav" android:textOn="@string/blogs" android:textOff="@string/blogs" style="@style/MenuButton"/>
                <ToggleButton android:id="@+id/buttonNavCompany" android:onClick="onClickNav" android:textOn="@string/companies" android:textOff="@string/companies" style="@style/MenuButton"/>
            </LinearLayout>
            <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/layoutNavPanel2" android:layout_marginLeft="15px" android:layout_marginRight="15px">
				<ToggleButton android:id="@+id/buttonNavSection1" android:onClick="onClickNav" android:textOn="@string/lenta" android:textOff="@string/lenta" style="@style/MenuLeftFlatButton"/>
				<ToggleButton android:id="@+id/buttonNavSection2" android:onClick="onClickNav" android:textOn="@string/all" android:textOff="@string/all" style="@style/MenuFlatButton" android:checked="true"/>
				<ToggleButton android:id="@+id/buttonNavSection3" android:onClick="onClickNav" android:textOn="@string/tematic" android:textOff="@string/tematic" style="@style/MenuFlatButton"/>
				<ToggleButton android:id="@+id/buttonNavSection4" android:onClick="onClickNav" android:textOn="@string/corporative" android:textOff="@string/corporative" style="@style/MenuRightFlatButton"/>
			</LinearLayout>
			<LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content" android:id="@+id/layoutNavPanel3" android:layout_marginLeft="15px" android:layout_marginRight="15px">
				<Button android:id="@+id/buttonNavHabred" android:onClick="onClickNav" android:text="@string/nav_habred" style="@style/SubMenuLeftButton"/>
				<Button android:id="@+id/buttonNavNew" android:onClick="onClickNav" android:text="@string/nav_new" style="@style/SubMenuButton"/>
				<Button android:id="@+id/buttonNavUnhabred" android:onClick="onClickNav" android:text="@string/nav_unhabred" style="@style/SubMenuRightButton"/>
			</LinearLayout>
        </LinearLayout>
    </RelativeLayout>
    <Button android:text="menuPostFromList" android:id="@+id/menuPostFromList" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content"/>
	<Button android:text="menuPostFull" android:id="@+id/menuPostFull" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content"/>
	<Button android:text="menuComment" android:id="@+id/menuComment" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content"/>
	<Button android:text="menuQuestFromList" android:id="@+id/menuQuestFromList" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content"/>
	<Button android:text="menuQuestFull" android:id="@+id/menuQuestFull" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content"/>
	<Button android:text="menuAnswer" android:id="@+id/menuAnswer" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content"/>
</LinearLayout>
