<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center_vertical">
    <EditText android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/user_name" android:layout_marginLeft="20dip" android:layout_marginRight="20dip" android:id="@+id/textUserName"></EditText>
    <EditText android:layout_width="match_parent" android:layout_height="wrap_content" android:hint="@string/password" android:layout_marginLeft="20dip" android:layout_marginRight="20dip" android:password="true" android:id="@+id/textPassword"></EditText>
    <WebView android:layout_gravity="center_horizontal" android:id="@+id/viewCaptcha" android:minWidth="166px" android:minHeight="75px" android:layout_height="wrap_content" android:layout_width="wrap_content"></WebView>
    <EditText android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginLeft="20dip" android:layout_marginRight="20dip" android:id="@+id/textCaptcha" android:hint="@string/captcha"></EditText>
    <CheckBox android:layout_width="wrap_content" android:text="@string/save_password" android:layout_height="wrap_content" android:layout_gravity="center_horizontal" android:checked="true" android:id="@+id/checkSavePassword"></CheckBox>
    <LinearLayout android:layout_width="match_parent" android:id="@+id/linearLayout1" android:layout_height="wrap_content" android:gravity="center_horizontal" android:baselineAligned="true">
        <Button android:layout_height="wrap_content" android:text="@string/login" android:minWidth="100dip" android:layout_width="wrap_content" android:id="@+id/buttonLogin"></Button>
        <Button android:text="@string/skip" android:layout_height="wrap_content" android:minWidth="100dip" android:layout_width="wrap_content" android:id="@+id/buttonSkip"></Button>
    </LinearLayout>
    
</LinearLayout>
