<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <ScrollView 
    	android:layout_height="wrap_content" 
    	android:id="@+id/scrollView1" 
    	android:layout_width="match_parent">
        <LinearLayout 
        	android:layout_width="match_parent" 
        	android:id="@+id/linearLayout1" 
        	android:layout_height="match_parent" 
        	android:orientation="vertical">
            <WebView 
            	android:id="@+id/webView1" 
            	android:layout_width="match_parent" 
            	android:layout_height="wrap_content"/>
            <MultiAutoCompleteTextView 
            	android:layout_height="wrap_content" 
            	android:layout_width="match_parent" 
            	android:id="@+id/title" android:hint="@string/title"/>
		    <MultiAutoCompleteTextView 
		    	android:layout_height="wrap_content" 
		    	android:layout_width="match_parent" 
		    	android:id="@+id/text" android:hint="@string/enter_text"/>
		    <MultiAutoCompleteTextView 
		    	android:layout_height="wrap_content" 
		    	android:layout_width="match_parent" 
		    	android:id="@+id/tags" android:hint="@string/tags"/>
            <LinearLayout 
		    	android:id="@+id/linearLayout2" 
		    	android:layout_height="wrap_content" 
		    	android:layout_width="match_parent" 
		    	android:gravity="center_horizontal">
		        <Button 
		        	android:id="@+id/preview" 
		        	android:layout_height="wrap_content" 
		        	android:layout_width="wrap_content" 
		        	android:text="@string/preview"/>
		        <Button 
		        	android:layout_height="wrap_content" 
		        	android:layout_width="wrap_content" 
		        	android:id="@+id/send" 
		        	android:text="@string/send"/>
		    </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
