<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
    <ScrollView 
    	android:id="@+id/scrollView1" 
    	android:layout_width="match_parent" android:layout_height="match_parent">
        <LinearLayout 
        	android:id="@+id/linearLayout1" 
        	android:layout_width="match_parent" 
        	android:orientation="vertical" 
        	android:layout_height="match_parent">
            <WebView 
            	android:layout_width="match_parent" 
            	android:layout_height="wrap_content" 
            	android:id="@+id/data"/>
            <MultiAutoCompleteTextView 
		    	android:layout_width="match_parent" 
		    	android:id="@+id/text" 
		    	android:hint="@string/enter_text" 
		    	android:layout_height="wrap_content"/>
		    <LinearLayout 
		    	android:id="@+id/linearLayout2" 
		    	android:layout_height="wrap_content" 
		    	android:layout_width="match_parent" 
		    	android:gravity="center_horizontal" 
		    	android:orientation="horizontal">
		        <Button 
		        	android:id="@+id/preview" 
		        	android:layout_height="wrap_content" 
		        	android:text="@string/preview" 
		        	android:layout_weight="1" 
		        	android:layout_width="0dip" 
		        	android:onClick="onClickPreview"/>
		        <Button 
		        	android:layout_height="wrap_content" 
		        	android:id="@+id/send" 
		        	android:text="@string/send" 
		        	android:layout_weight="1" 
		        	android:layout_width="0dip" 
		        	android:onClick="onClickSend"/>
		    </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
